--- a/hugo.toml
+++ b/hugo.toml
@@ -9,6 +9,7 @@ author = "Patrik Karlsson"
 description = "Skapare av Chatbot Explorations, innovativ problemlösare och teknikentusiast med en passion för att skapa meningsfulla lösningar. Utmanar gränserna för vad som är möjligt genom att använda banbrytande teknologi!"
 profilePicture = "images/profile.jpg"
 displayMode = "dark"
+readMore = true
 
 [[params.socialIcons]]
 icon = "fab fa-linkedin"
