--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,7 @@ languageCode = 'en-us'
 title = 'Chatbot Explorations'
 theme = "anatole"
 
+
 [params]
 title = "Jag är Patrik"
 author = "Patrik Karlsson"
@@ -10,6 +11,7 @@ description = "Skapare av Chatbot Explorations, innovativ problemlösare och tek
 profilePicture = "images/profile.jpg"
 displayMode = "dark"
 readMore = true
+gtagId = "G-FRFK35D2YV"
 
 [[params.socialIcons]]
 icon = "fab fa-linkedin"
