--- a/hugo.toml
+++ b/hugo.toml
@@ -5,7 +5,7 @@ theme = "anatole"
 
 
 [params]
-title = "Jag är Patrik"
+title = "Hej! Jag är Patrik"
 author = "Patrik Karlsson"
 description = "Skapare av Chatbot Explorations, innovativ problemlösare och teknikentusiast med en passion för att skapa meningsfulla lösningar. Utmanar gränserna för vad som är möjligt genom att använda banbrytande teknologi!"
 profilePicture = "images/profile.jpg"
